--- a/modules/server/src/main/resources/vm/node/edit.vm
+++ b/modules/server/src/main/resources/vm/node/edit.vm
@@ -14,7 +14,6 @@
 <div class="layui-container">
     <form action="./save.json" class="layui-form" id="form_node">
         <div class="layui-form-item">
-
             <label class="layui-form-label">节点ID</label>
             <div class="layui-input-block">
                 <input type="text" id="id" name="id" value="$!item.id" placeholder="创建后不能修改" class="layui-input"
@@ -25,7 +24,6 @@
             </div>
         </div>
         <div class="layui-form-item">
-
             <label class="layui-form-label">节点名称</label>
             <div class="layui-input-block">
                 <input type="text" id="name" name="name" value="$!item.name" placeholder="请填写节点名称"
@@ -55,7 +53,15 @@
                            lay-skin="switch"
                            lay-text="启用|停用">
                 </div>
-
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">超时时间</label>
+                <div class="layui-input-block">
+                    <input type="text" id="timeOut" name="timeOut" value="$!item.timeOut" placeholder="节点请求超时时间（毫秒）"
+                           class="layui-input"
+                           required
+                           lay-verify="required">
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
