--- a/modules/server/src/main/resources/vm/common/head.vm
+++ b/modules/server/src/main/resources/vm/common/head.vm
@@ -80,19 +80,16 @@
 
     function tabChange(options) {
         var element = top.layui.element;
-        var lay_id = 'tab_' + options.id;
-        if (options.id != "welcome") {
-            lay_id += options.title;
-            options.url = appendNodeId(options.url);
-        ## 如果存在选项卡，切换，否则创建
-            if ($('[lay-id="' + lay_id + '"]', top.document).length <= 0) {
-                var tab_content = '<iframe id="' + lay_id + '" name="' + options.id + '" src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
-                element.tabAdd('mainTabs', {
-                    title: options.title,
-                    content: tab_content,
-                    id: lay_id
-                });
-            }
+        var lay_id = 'tab_' + options.id + options.title;
+        options.url = appendNodeId(options.url);
+    ## 如果存在选项卡，切换，否则创建
+        if ($('[lay-id="' + lay_id + '"]', top.document).length <= 0) {
+            var tab_content = '<iframe id="' + lay_id + '" name="' + options.id + '" src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
+            element.tabAdd('mainTabs', {
+                title: options.title,
+                content: tab_content,
+                id: lay_id
+            });
         }
     ## 创建完后切换
         element.tabChange('mainTabs', lay_id);
