节点分发中打开控制台和文件管理交互方式调整

--- a/modules/server/src/main/resources/vm/common/head.vm
+++ b/modules/server/src/main/resources/vm/common/head.vm
@@ -109,7 +109,11 @@
     }
 
     function getTopQueryString(name) {
-        return getQueryStringByUrl(top.location.search.substr(1), name);
+        var val = getQueryStringByUrl(top.location.search.substr(1), name);
+        if (!val) {
+            val = getQueryString(name);
+        }
+        return val;
     }
 
     function getQueryString(name) {
